@@ -1,5 +1,7 @@
 2002-09-19  Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Source/GSFormat.m: Where a %p format prints a null pointer,
+	print the text (null).
 	* Source/GSTcpHandle.m: Check port for invalidation while looping
 	on write events, so we can fail if we become invalid while sending
 	or connecting, before the port timeout expires.
